syntax = "proto3";
package proto.v1;
option go_package = "thingue-launcher/proto/v1";
import "google/api/annotations.proto";
import "base.proto";

service InstanceService {
  rpc Add(InstanceList) returns (empty);
  rpc Delete(ClientIdReq) returns (empty);
  rpc UpdateConfig(empty) returns (empty);
  rpc GetSid(ClientIdReq) returns (empty);
  rpc UpdateProcessState(empty) returns (empty);
  rpc UpdateRestarting(empty) returns (empty);
  rpc ClearPakState(empty) returns (empty);
  rpc List(empty) returns (empty) {
    option (google.api.http) = {
      post: "/v1/instance/list"
      body: "*"
    };
  };
  rpc ControlPak(empty) returns (empty) {};
}


message ClientIdReq {
  uint32 id = 1;
}

message InstanceList {
  repeated InstanceInfo list = 1;
}

message InstanceInfo {

}